tests/tools/snapshots/tools__mirror__skips_opted_out_users.snap
---
source: tests/tools/mirror.rs
expression: test_db.messages().await
---
2026-03-01 07:00:00.000 00000000-0000-4000-8000-000000000001 #testchan(11111) alice(22222) "Alice" color=Some(16711680) badges=["subscriber/12", "premium/1"]: hello
